[CHKT-1228] Enabled 3DS protocol version 2.2.0, dynamic protocol vers… (#381)
* [CHKT-1228] Enabled 3DS protocol version 2.2.0, dynamic protocol version selection

* [CHKT-1232] Implemented /continue 3DS endpoint

--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -27,6 +27,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="io.primer.android.threeds.ui.ThreeDsActivity"
+            android:exported="true"
+            tools:node="merge">
+            <intent-filter
+                android:autoVerify="true"
+                tools:targetApi="m">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="{yourapp.com}"
+                    android:pathPrefix="/3ds"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
