fix: [CHKT-1324] Allow only one instance of Drop-In (#397)
* fix: [CHKT-1324] Allow only one instance of Drop-In

--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:name=".CheckoutSheetActivity"
             android:exported="true"
             android:label=""
+            android:launchMode="singleTask"
             android:theme="@style/Theme.AppCompat.PrimerUniversalCheckout"
             android:windowSoftInputMode="adjustResize" />
 
