--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -89,6 +89,9 @@ dependencies {
     compileOnly Dependencies.iPay88.primeriPay88
     testImplementation Dependencies.iPay88.primeriPay88
 
+    compileOnly Dependencies.nolPay.primerNolPay
+    testImplementation Dependencies.nolPay.primerNolPay
+
     testImplementation TestDependencies.Kotlin.coroutines
     testImplementation TestDependencies.Android.archCore
     testImplementation TestDependencies.Android.liveData
