chore: remove manual validation in example app

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -95,7 +95,7 @@ dependencies {
 
     implementation 'io.primer:klarna-android:1.0.1'
     implementation 'io.primer:ipay88-my-android:1.0.1'
-    implementation 'io.primer:nol-pay-android:0.0.0-SNAPSHOT'
+    implementation 'io.primer:nol-pay-android:0.1.0'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
