build(CHKT-1773): Move to latest Android build system (#443)
* chore(CHKT-1773): Replaced JaCoCo with Kover

* build: switched to plugins instead of legacy buildscripts, separated gradle tasks for code quality

* build: moved plugins and deps to vatalog versions

* build: update workflows to use Java 17

* fix: disable mangling of methods that return kotlin.Result

* chore: revert debug options in example app

* chore: use proper version of ktlint

* chore: move JVM target to Java 11

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,10 @@
-*.iml
 .gradle
 .env
 *.project
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-/.idea/dictionaries
-/.idea/compiler.xml
-/.idea/gradle.xml
-/.idea/misc.xml
-/.idea/deploymentTargetDropDown.xml
-/.idea/vcs.xml
-/.idea/jarRepositories.xml
-/.idea/sonarlint
+# IntelliJ
+*.iml
+.idea/
 
 .DS_Store
 /build
