--- a/primer-sdk-android/src/debug/AndroidManifest.xml
+++ b/primer-sdk-android/src/debug/AndroidManifest.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.primer.android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
         <activity
             android:name=".DebugActivity"
             android:exported="true"
-            android:label="Debug">
+            android:label="Debug"
+            android:theme="@style/Theme.AppCompat.PrimerUniversalCheckout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
