--- a/build.gradle
+++ b/build.gradle
@@ -1,56 +1,17 @@
 buildscript {
     ext {
-        projectJvmTarget = JavaVersion.VERSION_1_8
-        kotlinVersion = '1.7.20'
-
-        projectDependencies = [
-                androidGradlePlugin: 'com.android.tools.build:gradle:7.3.1',
-                kotlinGradlePlugin : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion",
-                androidJunit5      : 'de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1',
-                staticAnalysis     : [
-                        ktlintGradle: 'org.jlleitschuh.gradle:ktlint-gradle:11.6.1',
-                ],
-                mavenPublish       : 'com.github.dcendents:android-maven-gradle-plugin:2.1',
-                jacoco             : 'org.jacoco:org.jacoco.core:0.8.9',
-                dexCount           : 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:3.1.0'
-        ]
-    }
-
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
-    }
-
-    dependencies {
-        classpath projectDependencies.androidGradlePlugin
-        classpath projectDependencies.kotlinGradlePlugin
-        classpath projectDependencies.staticAnalysis.ktlintGradle
-        classpath projectDependencies.androidJunit5
-        classpath projectDependencies.mavenPublish
-        classpath projectDependencies.jacoco
-        classpath projectDependencies.dexCount
+        projectJvmTarget = JavaVersion.VERSION_11
     }
 }
 
 plugins {
-    id "io.gitlab.arturbosch.detekt" version "1.16.0"
-    id "org.sonarqube" version "4.0.0.2929"
-}
-
-sonarqube {
-    properties {
-        property "sonar.projectKey", "primer-sdk-android"
-        property "sonar.organization", "primerio"
-        property "sonar.host.url", "https://sonarcloud.io"
-        property "sonar.java.coveragePlugin", "jacoco"
-        property "sonar.coverage.jacoco.xmlReportPaths", "/home/runner/work/primer-sdk-android/primer-sdk-android/primer-sdk-android/build/jacoco/jacoco.xml"
-        property "sonar.language", "kotlin"
-        property "sonar.exclusions", "**/example/**/*, **/di/**/*,  **/ui/**/*, **/analytics/**/*"
-        property "sonar.coverage.exclusions", "**/example/**/*, **/di/**/*,  **/ui/**/*, **/analytics/**/*"
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    alias libs.plugins.android.library apply false
+    alias libs.plugins.kotlin.android apply false
+    alias libs.plugins.detekt
+    alias libs.plugins.sonarqube apply false
+    alias libs.plugins.dexcount
+    alias libs.plugins.kover apply false
+    alias libs.plugins.ktlint apply false
+    alias libs.plugins.junit5 apply false
+    alias libs.plugins.maven.publish
 }
