--- a/example/build.gradle
+++ b/example/build.gradle
@@ -17,11 +17,10 @@ repositories {
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "io.primer.sample"
+        compileSdk 33
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 4
@@ -51,13 +50,13 @@ android {
         }
     }
     compileOptions {
-        coreLibraryDesugaringEnabled true
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
 
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = 17
         freeCompilerArgs += '-Xjvm-default=all'
     }
     buildFeatures {
@@ -70,36 +69,36 @@ android {
             }
         }
     }
+    namespace 'io.primer.sample'
 }
 
 dependencies {
     implementation project(':primer-sdk-android')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.10"
+    implementation libs.android.ktx
+    implementation libs.android.appcompat
+    implementation libs.android.material
     implementation("com.squareup.okhttp3:okhttp:4.9.2")
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation libs.android.constraintlayout
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "io.primer:3ds-android:1.2.0"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation libs.primer.threeds
+    implementation libs.android.lifecycle.livedata.ktx
+    implementation libs.android.lifecycle.viewmodel.ktx
     implementation 'io.github.pilgr:paperdb:2.7.2'
 
-    implementation 'io.primer:klarna-android:1.0.1'
-    implementation 'io.primer:ipay88-my-android:1.0.1'
-    implementation 'io.primer:nol-pay-android:1.0.1'
+    implementation libs.primer.klarna
+    implementation libs.primer.ipay88
+    implementation libs.primer.nol.pay
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
     testImplementation 'junit:junit:4.13.2'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
