--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -18,6 +18,7 @@ android {
         release {
             minifyEnabled true
 
+            consumerProguardFiles 'consumer-rules.pro'
             proguardFiles getDefaultProguardFile(
                     'proguard-android-optimize.txt'),
                     'proguard-rules.pro'
