--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ okhttp = "4.12.0"
 primer-3ds = "1.4.1"
 primer-klarna = "1.0.2"
 primer-ipay88 = "1.0.1"
-primer-nol-pay = "1.0.1"
+primer-nol-pay = "1.0.2"
 
 junit5 = "5.8.2"
 androidJunit5TestRunner = "1.3.0"
@@ -34,6 +34,7 @@ kover = "0.7.3"
 ktlint = "11.6.1"
 junit5Plugin = "1.9.3.0"
 mavenPublish = "0.22.0"
+stripe = "20.37.3"
 
 [libraries]
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
@@ -71,6 +72,8 @@ kotlin-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coro
 json = { group = "org.json", name = "json", version.ref = "json" }
 livedata-testing = { group = "com.jraska.livedata", name = "testing-ktx", version.ref = "liveDataTesting" }
 arch-core = { group = "androidx.arch.core", name = "core-testing", version.ref = "archCore" }
+stripe-android = { module = "com.stripe:stripe-android", version.ref = "stripe" }
+stripe-financial-connections = { module = "com.stripe:financial-connections", version.ref = "stripe" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
