--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,6 @@
+[*.{kt,kts}]
+max_line_length = 120
+
 # According to https://kotlinlang.org/docs/reference/coding-conventions.html#names-for-test-methods it is acceptable to write method names
 # in natural language. When using natural language, the description tends to be longer. Allow lines containing an identifier between
 # backticks to be longer than the maximum line length. (Since 0.41.0)
