--- a/config/code-analysis/sonar.gradle
+++ b/config/code-analysis/sonar.gradle
@@ -2,7 +2,7 @@ apply plugin: "org.sonarqube"
 
 sonarqube {
     properties {
-        property "sonar.projectKey", "primer-sdk-android"
+        property "sonar.projectKey", "primer-io_primer-sdk-android"
         property "sonar.organization", "primerio"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.java.coveragePlugin", "kover"
