--- a/config/android-common.gradle
+++ b/config/android-common.gradle
@@ -37,7 +37,10 @@ dependencies {
     testImplementation libs.junit.jupiter.engine
     testImplementation libs.junit.jupiter.params
 
-    testImplementation libs.mockk
+    testImplementation(libs.mockk) {
+        exclude group: "org.slf4j", module: "slf4j-log4j12"
+    }
+
     testImplementation libs.arch.core
 
     testImplementation libs.kotlin.test.junit
