--- a/tooling/code-analysis/sonar.gradle
+++ b/tooling/code-analysis/sonar.gradle
@@ -52,6 +52,10 @@ subprojects { subproject ->
                     '**/*ViewHolder.*',
                     '**/*Adapter$*.*',
                     '**/*Adapter.*',
+                    '**/*Button.*',
+                    '**/*Widget.*',
+                    '**/*WebViewClient.*',
+                    '**/*Layout.*',
                     '**/*Behavior.*',
                     '**/*Dialog.*',
                     // view bindings
