feat(assets-manager): Added support for native views (#809)
* feat(assets-manager): Added support for native views

* chore: update exclusion paths

* refactor: change naming

* refactor: change accessor

* chore: sonar exclusions

---------

Co-authored-by: FlaviuExtPrimer <149587774+FlaviuExtPrimer@users.noreply.github.com>

--- a/tooling/code-analysis/sonar.gradle
+++ b/tooling/code-analysis/sonar.gradle
@@ -36,6 +36,7 @@ subprojects { subproject ->
                     '**/analytics/**/*',
                     '**/widgets/**/*',
                     '**/views/**/*',
+                    'drop-in/**/ui/**/*',
                     '**/implementation/configuration/domain/*',
                     '**/implementation/tokenization/data/repository/*',
                     '**/data/datasource/*',
@@ -52,12 +53,13 @@ subprojects { subproject ->
                     '**/*ViewHolder.*',
                     '**/*Adapter$*.*',
                     '**/*Adapter.*',
-                    '**/*Button.*',
-                    '**/*Widget.*',
-                    '**/*WebViewClient.*',
-                    '**/*Layout.*',
-                    '**/*Behavior.*',
-                    '**/*Dialog.*',
+                    '**/*Button*',
+                    '**/*Widget*.*',
+                    '**/*WebViewClient*',
+                    '**/*Layout*',
+                    '**/*Behavior*',
+                    '**/*Dialog*',
+                    '**/*Dialog$*',
                     // view bindings
                     '**/databinding/**',
                     '**/binding/**',
