chore: added LICENSE (#816)
* chore: added LICENSE

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,12 +25,11 @@ android.enableR8.fullMode=true
 GROUP=io.primer
 POM_ARTIFACT_ID=android
 VERSION_NAME=2.33.1
-POM_NAME=android
 POM_DESCRIPTION=Primer SDK for Android
 POM_INCEPTION_YEAR=2021
 POM_URL=https://github.com/primer-io/primer-sdk-android
-POM_LICENCE_NAME=MIT
-POM_LICENCE_URL=https://tldrlegal.com/license/mit-license#fulltext
+POM_LICENCE_NAME=BSD-3-Clause
+POM_LICENCE_URL=https://www.tldrlegal.com/license/bsd-3-clause-license-revised#full-text
 POM_LICENCE_DIST=repo
 POM_SCM_URL=https://github.com/primer-io/primer-sdk-android
 POM_SCM_CONNECTION=scm:git:git://github.com/primer-io/primer-sdk-android.git
