--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,7 @@ android.enableR8.fullMode=true
 # Publishing values (see publish.gradle)
 GROUP=io.primer
 POM_ARTIFACT_ID=android
+POM_NAME=android
 VERSION_NAME=2.33.1
 POM_DESCRIPTION=Primer SDK for Android
 POM_INCEPTION_YEAR=2021
