build: expose BOM module (#863)
* build: expose BOM module

--- a/settings.gradle
+++ b/settings.gradle
@@ -51,3 +51,4 @@ include ':banks-component'
 include ':web-redirect-shared'
 include ':custom-tabs'
 include ':primer-sandbox-processor'
+include ':bom'
